<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_action_home"/>

    <item
        android:id="@+id/nav_search"
        android:title="@string/search"
        android:icon="@drawable/ic_action_search"/>

    <item
        android:id="@+id/nav_add"
        android:title="@string/add"
        android:icon="@drawable/ic_action_add"/>

    <item
        android:id="@+id/nav_notifications"
        android:title="@string/notifications"
        android:icon="@drawable/ic_action_notifications"/>

    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_action_profile"/>

</menu>