<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/et_RegisterUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_RegisterUserSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:inputType="text"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintTop_toBottomOf="@+id/et_RegisterUserName" />

        <EditText
            android:id="@+id/et_RegisterPetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pet_name"
            android:inputType="text"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintTop_toBottomOf="@+id/et_RegisterUserSurname" />

        <EditText
            android:id="@+id/et_RegisterMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintTop_toBottomOf="@+id/et_RegisterPetName" />

        <EditText
            android:id="@+id/et_RegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintTop_toBottomOf="@+id/et_RegisterMail" />

        <Button
            android:id="@+id/btn_RegisterRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_RegisterPassword"/>

        <ProgressBar
            android:id="@+id/pb_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="invisible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>