<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.Add">

    <ImageView
        android:id="@+id/iv_AddPreview"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_AddDescription"/>

    <EditText
        android:id="@+id/et_AddDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/description"
        android:maxLines="2"
        android:maxLength="50"
        app:layout_constraintTop_toBottomOf="@id/iv_AddPreview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cb_Location"/>

    <CheckBox
        android:id="@+id/cb_Location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_AddDescription"
        app:layout_constraintBottom_toTopOf="@id/lay_Group"
        android:layout_marginHorizontal="15dp"
        android:text="@string/add_your_location" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lay_Group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_Location"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_AddChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/lay_uploadButtons"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/lay_uploadButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn_AddChoose"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_AddUploadPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_as_post" />

            <Button
                android:id="@+id/btn_AddUploadUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_as_profile_image" />

            <Button
                android:id="@+id/btn_AddUploadPet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_as_pet_image" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pb_Upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>